# openio-sdk-rust

./: Cargo.toml  README.md
examples/: connect.json  s3.rs
src/: lib.rs
src/aws/common/: credentials.rs  region.rs  request.rs  signature.rs
src/aws/s3/: s3client.rs
